This file should compile a short overview of the changes in the code base for the latest versions.

Current version of the framework is 1.0.
