@@ -1,4 +1,26 @@
 """
+The MIT License
+
+Copyright (c) Tigran Hakobyan. http://tiggreen.me
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+
 Author: Tigran Hakobyan (txh7358@rit.edu)
 Version: 1.0
 Date: 11/29/2014
@@ -6,6 +28,8 @@ Date: 11/29/2014
 The runner class for all 3 MR prototypes.
 This module is run by a user and based on a file format it
 calls the right program.
+
+JUST IMPLEMENTED FOR TESTING PURPOSES. 
 
 .txt --> WordCount
 .json --> Twitter
